# videowall

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  content.py  main.py  movie_list.py  options.py  player.py  pyproject.toml  searchable_list.py  style.qss  video_wall.py  window.py
.github/workflows/: release.yml
src/videowall/: __init__.py  browser.py  content.py  main.py  options.py  player.py  searchable_list.py  style.qss  video_wall.py  window.py
