[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videowall"
version = "0.1.0"
description = "A Qt video wall player"
authors = [
    {name = "Robin Scher", email = "robin@uberware.net"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7",
]

[project.scripts]
myapp = "videowall:main"

[project.urls]
Homepage = "https://github.com/uberware/videowall"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["D", "F", "I"]
