[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videowall"
version = "1.2.0"
description = "A Qt video wall player"
authors = [
    {name = "Robin Scher", email = "robin@uberware.net"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7",
]

[project.scripts]
videowall = "videowall:main"

[project.urls]
Homepage = "https://github.com/uberware/videowall"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
videowall = ["*.qss"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["D", "F", "I"]

[tool.bandit]
exclude_dirs = ["dist", "venv*", "*.egg-info"]
skips = [
    "B311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
]
